# Rregistration

./: .gitignore  README.md  Rregistration.files  Rregistration.includes  build_  clean  cppcheck.sh  esu_conf.pri  main.cpp  pch.h  registration.pro  rename_files.sh
bld/arm/: CMakeLists.txt
bld/x86/: CMakeLists.txt
conf/: registration_config.xml  registration_list.json  registration_table.xml  staff_description.xml
include/: global1.h  include  netdevice  pch.h  registration  staff  storage  test.h
include/interfaces/: i_singleton.h
include/logger/: esu_logger.h
interfaces/: i_singleton.h  interfaces.pri
libregistration/: build_
libregistration/bld/: .gitignore
libregistration/bld/arm/: CMakeLists.txt
libregistration/bld/x86/: CMakeLists.txt
libregistration/include/registration/: esu_registration_data.h  esu_registration_engine.h  esu_registration_engine_p.h  esu_registration_table_manager.h  registration.h  registration_data.h  registration_engine.h  registration_engine_p.h  registration_engine_types.h  registration_events.h  registration_global.h  registration_net.h  registration_p.h  registration_table_manager.h  registration_types_net.h
libregistration/src/: esu_registration.cpp  esu_registration_engine.cpp  esu_registration_table_manager.cpp  registration.cpp  registration_data.cpp  registration_engine.cpp  registration_engine_p.cpp  registration_p.cpp  registration_table_manager.cpp
libstaff/: build_  clean  rebuild
libstaff/bld/arm/: CMakeLists.txt
libstaff/bld/x86/: CMakeLists.txt
libstaff/include/staff/: esu_staff_structure_p.h  esu_staff_system.h  staff_base_unit.h  staff_base_unit_p.h  staff_commander.h  staff_division.h  staff_engine.h  staff_globals.h  staff_object.h  staff_object_p.h  staff_soldier.h  staff_soldier_p.h  staff_structure.h  staff_structure_p.h  staff_system.h  staff_system_p.h  staff_types.h
libstaff/src/: esu_staff_engine.cpp  esu_staff_structure.cpp  esu_staff_system.cpp  esu_staff_system_p.cpp  staff_base_unit.cpp  staff_base_unit_p.cpp  staff_division.cpp  staff_division_p.cpp  staff_engine.cpp  staff_globals.cpp  staff_object.cpp  staff_object_p.cpp  staff_soldier.cpp  staff_soldier_p.cpp  staff_structure.cpp  staff_system.cpp  staff_system_p.cpp
libstorage/: build_
libstorage/bld/arm/: CMakeLists.txt
libstorage/bld/x86/: CMakeLists.txt
libstorage/include/storage/: abstractlocalstoragetable.h  localstoragemanager.h
libstorage/src/: main.cpp_bak  varianttable.cpp
libstorage_bak/: .gitignore  build_
libstorage_bak/src/: abstractlocalstoragetable.cpp  dictionarytable.cpp
logger/: esu_logger.pri
mods/local_storage/: dictionarytable.cpp  dictionarytable.h  esu_data_storage.pri  localstoragemanager.cpp  localstoragemanager.h  varianttable.cpp  varianttable.h
mods/registration/: registration.pri
mods/registration/core/: esu_registration.cpp  esu_registration.h  esu_registration_data.cpp  esu_registration_events.h  esu_registration_global.h  esu_registration_types_net.h  registration.pri  registration.qrc
mods/registration/core/engine/: esu_registration_engine.cpp  esu_registration_engine.h  esu_registration_engine_p.cpp  esu_registration_engine_p.h  esu_registration_engine_types.h  esu_registration_table_manager.cpp  esu_registration_table_manager.h
mods/registration/core/engine/temp/: esu_registration_engine.cpp  esu_registration_engine.h  esu_registration_engine_p.cpp  esu_registration_engine_p.h
mods/registration/core/private/: esu_registration_p.cpp  esu_registration_p.h
mods/registration/ui/quick1/: ui_registration.pri  ui_registration.qrc
mods/registration/ui/quick1/app/: ui_registration_application.cpp  ui_registration_application.h  ui_registration_application_p.cpp  ui_registration_application_p.h
mods/registration/ui/quick1/model/: ui_registration_base_model.cpp  ui_registration_base_model.h  ui_registration_soldiers_model.cpp  ui_registration_soldiers_model.h
mods/registration/ui/quick1/qml/: Button.qml  UIRegistrationForm.qml  UserRegistrationForm.qml
mods/registration/ui/quick1/viewer/: esu_registration_viewer.cpp  esu_registration_viewer.h  esu_registration_viewer_p.h
mods/registration/ui/quick2/: esu_registration_ui.cpp  esu_registration_ui.h  esu_registration_ui_p.cpp  esu_registration_ui_p.h  ui_registration.pri  ui_registration.qrc
mods/registration/ui/quick2/model/: esu_registration_models.h  esu_registration_path_model.cpp  esu_registration_path_model.h  esu_registration_queries_model.cpp  esu_registration_queries_model.h  esu_registration_ranks_model.cpp  esu_registration_ranks_model.h  esu_registration_staff_model.cpp  esu_registration_staff_model.h  esu_registration_staff_model_p.h  esu_registration_table_model.cpp  esu_registration_table_model.h  staff_ui_model.cpp  staff_ui_model_p.h
mods/registration/ui/quick2/qml/: PageFooter.qml  PageHeader.qml  PathDelegate.qml  PathPanel.qml  RegistrationForm.qml  StaffItemDelegate.qml
mods/staff/core/: esu_staff_structure.cpp  esu_staff_system.cpp  esu_staff_system.h  esu_staff_system_p.cpp  staff.pri  staff.qrc
mods/staff/core/conf/: staff_example.xml  staff_info.xml  staff_structure.xml  staff_structure_msb.xml
mods/staff/core/structures/: staff_base_unit.cpp  staff_base_unit.h  staff_base_unit_p.cpp  staff_base_unit_p.h  staff_commander.cpp  staff_commander.h  staff_commander_p.cpp  staff_commander_p.h  staff_division.cpp  staff_division.h  staff_division_list.cpp  staff_division_list.h  staff_division_list_p.h  staff_division_p.cpp  staff_division_p.h  staff_globals.cpp  staff_object.cpp  staff_object.h  staff_object_p.cpp  staff_object_p.h  staff_soldier.cpp  staff_soldier.h  staff_soldier_p.cpp  staff_soldier_p.h  staff_types.cpp  staff_types.h
mods/staff/ui/quick1/: ui_military_staff.pri  ui_military_staff.qrc
mods/staff/ui/quick1/app/: ui_staff_application.cpp  ui_staff_application.h  ui_staff_application_p.cpp  ui_staff_application_p.h
mods/staff/ui/quick2/: ui_military_staff.pri  ui_military_staff.qrc
src/: main.cpp  test.cpp
(+42 files in other folders)
